--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ keycloak.credentials.secret=eYGUghCnhT7mzPO7JuHdTW6tWGEjncTU
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
+
+master.user=admin
+master.user.password=admin
+master.realm=master
+master.client=master-client
